[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Enemies/enemy-placeholder.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Combat/Hitbox.gd" type="Script" id=3]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "hit"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 18 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 18 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 11, 17 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 128
script = ExtResource( 1 )

[node name="EnemySprite" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="EnemySprite"]
texture = ExtResource( 2 )
hframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="EnemySprite"]
anims/RESET = SubResource( 5 )
anims/hit = SubResource( 4 )

[node name="EnemyCollision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 2

[node name="HurtboxShape" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="HitboxShape" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 6 )

[node name="InvincibleTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_InvincibleDelay_timeout"]
